# 2013-SIIMS-ot-splitting-repro

./: LICENSE  README.md  pyproject.toml  readme.md
docs/: matlab_to_python.md  performance_plan.md
src/ot_splitting/: __init__.py  grid.py  operators.py  poisson.py  problems.py  projections.py  prox.py  run_obstacle.py  solver.py  viz.py
tests/: test_operators.py  test_poisson.py  test_problems.py  test_projections.py  test_prox.py  test_solver.py  test_viz.py
